<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_mode"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/native_to_jp"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/native_to_jp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_native_to_japanese"
        app:layout_constraintBottom_toTopOf="@+id/jp_to_native"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/jp_to_native"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_japanese_to_native"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/native_to_jp"/>

</androidx.constraintlayout.widget.ConstraintLayout>